--- a/Aula_33/package.json
+++ b/Aula_33/package.json
@@ -4,6 +4,12 @@
   "description": "",
   "main": "sum.js",
   "devDependencies": {
-    "chai": "^4.3.4"
+    "chai": "^4.3.4",
+    "mocha": "^9.1.3",
+    "nyc": "^15.1.0"
+  },
+  "scripts": {
+    "test": "mocha",
+    "coverage": "nyc npm run test"
   }
 }
